--- a/source/platformio.ini
+++ b/source/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	me-no-dev/ESPAsyncTCP@^1.2.2
+	me-no-dev/ESP Async WebServer@^1.2.3
